tests/tests/legacy_kustomizations/katib-controller/test_data/expected/apps_v1_deployment_katib-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: katib
    app.kubernetes.io/component: katib
    app.kubernetes.io/instance: katib-controller-0.8.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: katib-controller
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.8.0
    component: ui
  name: katib-ui
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katib
      app.kubernetes.io/component: katib
      app.kubernetes.io/instance: katib-controller-0.8.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: katib-controller
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: 0.8.0
      component: ui
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: katib
        app.kubernetes.io/component: katib
        app.kubernetes.io/instance: katib-controller-0.8.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: katib-controller
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: 0.8.0
        component: ui
      name: katib-ui
    spec:
      containers:
      - args:
        - --port=8080
        command:
        - ./katib-ui
        env:
        - name: KATIB_CORE_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: uhub.service.ucloud.cn/a4x-kubeflow/kubeflowkatib/katib-ui:v1beta1-a96ff59
        imagePullPolicy: IfNotPresent
        name: katib-ui
        ports:
        - containerPort: 8080
          name: ui
      serviceAccountName: katib-ui
